Add index.js to repo

--- a/index.html
+++ b/index.html
@@ -1,75 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal POrtfolio website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/58d378eaef.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div id="header">
-        <div class="container">
-            <nav>
-                <img src="/My_Portfolio/images/logo.png" height="160px" width="140px" class="logo"/>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li> 
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-               </nav>
-               <div class="header-text">
-                <P>Passionate Web Developer</P>
-                <h1>Hi! I 'm<span> Prashanta</span><br> Deuja From Nepal </h1>
-  </div>
+      <div class="container">
+        <nav>
+          <img
+            src="/My_Portfolio/images/logo.png"
+            height="160px"
+            width="140px"
+            class="logo"
+          />
+          <ul id="sidemenu">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+
+            <i class="fas fa-times" onclick="closemenu()"></i>
+          </ul>
+          <i class="fas fa-bars" onclick="openmenu()"></i>
+        </nav>
+        <div class="header-text">
+          <p>Passionate Web Developer</p>
+          <h1>
+            Hi! I 'm<span> Prashanta</span><br />
+            Deuja From Nepal
+          </h1>
         </div>
+      </div>
     </div>
     <!--About section-->
     <div id="about">
-        <div class="container">
-            <div class="row">
-        
-            <div class="about-col-1">
-                <img src="/My_Portfolio/images/user.jpg"  alt="photo">
+      <div class="container">
+        <div class="row">
+          <div class="about-col-1">
+            <img src="/My_Portfolio/images/user.jpg" alt="photo" />
+          </div>
+          <div class="about-col-2">
+            <h1 class="sub-title">About me</h1>
+            <p>
+              " "Hello there! I'm Prashanta Deuja, a passionate Bachelor's
+              student at Tribhuwan University,currently immersedin the world of
+              BSc.CSIT.With a keen interest in web development,I've honed my
+              skills in HTML, CSS, and JavaScript, crafting digital experiences
+              one line of code at a time. My journey also includes delving into
+              the realms of cybersecurity, as well as exploring the exciting
+              possibilities of IoT and robotics. Join me as I continue to learn,
+              innovate, and build towards a future where technology enhances
+              lives."
+            </p>
+
+            <div id="tab-titles">
+              <p class="tab-links active-links" onclick="opentab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="opentab('experience')">
+                Experience
+              </p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
-            <div class="about-col-2">
-                <h1 class="sub-title">About me</h1>
-                <p>" "Hello there! I'm Prashanta Deuja, a passionate Bachelor's student at Tribhuwan University,currently immersedin the world of BSc.CSIT.With a keen interest in web development,I've honed my skills in HTML, CSS, and JavaScript, crafting digital experiences one line of code at a time. My journey also includes delving into the realms of cybersecurity, as well as exploring the exciting possibilities of IoT and robotics. Join me as I continue to learn, innovate, and build towards a future where technology enhances lives."</p>
-               <br>
-                <div id="tab-titles">
-                    <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                    <p class="tab-links" onclick="opentab('education')">Education</p>
-                </div><br>
-                <div id="tab-contents active-tab" id="skills">
-                    <ul>
-                        <li><span>UI/UX</span><br>Desigining Web/App interfaces</li>
-                        <li><span>Web-Development</span><br>Web app Development</li>
-                        <li><span>Project Management</span><br>Managing the Projects</li>
-                     </ul>
+
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li><span>UI/UX</span><br />Desigining Web/App interfaces</li>
+                <li><span>Web-Development</span><br />Web app Development</li>
+                <li>
+                  <span>Project Management</span><br />Managing the Projects
+                </li>
+              </ul>
             </div>
-            <div id="tab-contents" id="experience">
-                <ul>
-                    <li><span>2021-2013</span><br>Worked as a computer Teacher at ABC school</li>
-                    <li><span>2029-21</span><br>worked at xy complex as sales Accountant</li>
-                    <li><span>2023</span><br>Managing the Projects</li>
-                 </ul>
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li>
+                  <span>2021-2013</span><br />Worked as a computer Teacher at
+                  ABC school
+                </li>
+                <li>
+                  <span>2029-21</span><br />worked at xy complex as sales
+                  Accountant
+                </li>
+                <li><span>2023</span><br />Managing the Projects</li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li>
+                  <span>2016</span><br />SEE From S.S Niketan English High
+                  School
+                </li>
+                <li>
+                  <span>2018</span><br />
+                  completed +2 science from Saipal Acamedy
+                </li>
+                <li>
+                  <span>2024</span><br />Bachelors In Computer Science And
+                  Information Technology(BSC.CSIT) from Mechi Multiple
+                  Campus(Tribhuwan University)
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div id="tab-contents" id="education">
-            <ul>
-                <li><span>2016</span><br> S.S Niketan English High School</li>
-                <li><span>2018</span><br> completed +2 science from Saipal Acamedy </li>
-                <li><span>2024</span><br>BSC.CSIT From Mechi Multiple Campus(Tribhuwan University)</li>
-             </ul>
+      </div>
     </div>
+
+    <!------------services------------->
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h2>Web Design</h2>
+            <p>web design services</p>
+            <a href="#">Learn More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-crop"></i>
+            <h2>UI/ux Design</h2>
+            <p>web design services</p>
+            <a href="#">Learn More</a>
+          </div>
+          <div>
+            <i class="fa-brands fa-app-store-ios"></i>
+            <h2>App Design</h2>
+            <p>web design services</p>
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!------------Portfolio-------------------->
+    <div id="portfolio">
+      <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+          <div class="work">
+            <img src="/My_Portfolio/images/work-1.png" />
+            <div class="layer">
+              <h3>Social Media App</h3>
+              <p>connect people all around the world</p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
+          </div>
+          <div class="work">
+            <img src="/My_Portfolio/images/work-2.png" />
+            <div class="layer">
+              <h3>Music App</h3>
+              <p>connect people all around the world</p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
+          </div>
+          <div class="work">
+            <img src="/My_Portfolio/images/work-3.png" />
+            <div class="layer">
+              <h3>online shopping App</h3>
+              <p>connect people all around the world</p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
+          </div>
+        </div>
+        <a href="#" class="btn">See more</a>
+      </div>
+    </div>
+
+    <!------------------------Contacts------------------------------>
+
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="subtitle">Contact Me</h1>
+            <p>
+              <i class="fa-solid fa-paper-plane"></i>Prashantadeuja@gmail.com
+            </p>
+            <p><i class="fa-solid fa-phone"></i>+977-9815951734</p>
+            <div class="social-icons">
+              <a href="https://www.linkedin.com/in/prashantadeuja/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <a
+              href="/My_Portfolio/images/my-cv - Copy.pdf"
+              download
+              class="btn btn2"
+              >Download CV</a
+            >
+          </div>
+          <div class="class contact-right">
+            <form name="submit-to-google-sheet">
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="Email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
+              <button type="submit" class="btn btn2">Submit</button>
+            </form>
+            <span id="msg"></span>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>copyright @Prashanta_Deuja</p>
+      </div>
     </div>
     <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-    
+      var tablinks = document.getElementsByClassName("tab-links");
+      var tabcontents = document.getElementsByClassName("tab-contents");
+      function opentab(tabname) {
+        for (tablink of tablinks) {
+          tablink.classList.remove("active-link");
+        }
+        for (tabcontent of tabcontents) {
+          tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+      }
     </script>
-</body>
+    <script>
+      var sidemenu = document.getElementById("sidemenu");
+      function openmenu() {
+        sidemenu.style.right = "0";
+      }
+      function closemenu() {
+        sidemenu.style.right = "-200px";
+      }
+    </script>
+    <script>
+      const scriptURL =
+        "<https://script.google.com/macros/s/AKfycbzgsrbd2hTnw3KAQeN8VrcFhjDvxPLhCL67_4S-759UyOC3BxCwLC4CQuAn-TGjhYFBvg/exec>";
+      const form = document.forms["submit-to-google-sheet"];
+      const msg = document.getElementById("msg");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            msg.innerHTML = "Message sent sucessfully";
+            setTimeout(function () {
+              msg.innerHTML = "";
+            }, 5000);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+  </body>
 </html>
