fix path of image attribute in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <nav>
           <img
-            src="/My_Portfolio/images/logo.png"
+            src="/images/logo.png"
             height="160px"
             width="140px"
             class="logo"
@@ -45,12 +45,12 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="/My_Portfolio/images/user.jpg" alt="photo" />
+            <img src="/images/user.jpg" alt="photo" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About me</h1>
-            <p>
-              " "Hello there! I'm Prashanta Deuja, a passionate Bachelor's
+           <p>
+               "Hello there! I'm Prashanta Deuja, a passionate Bachelor's
               student at Tribhuwan University,currently immersedin the world of
               BSc.CSIT.With a keen interest in web development,I've honed my
               skills in HTML, CSS, and JavaScript, crafting digital experiences
@@ -148,7 +148,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="/My_Portfolio/images/work-1.png" />
+            <img src="/images/work-1.png" />
             <div class="layer">
               <h3>Social Media App</h3>
               <p>connect people all around the world</p>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="/My_Portfolio/images/work-2.png" />
+            <img src="/images/work-2.png" />
             <div class="layer">
               <h3>Music App</h3>
               <p>connect people all around the world</p>
@@ -168,7 +168,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="/My_Portfolio/images/work-3.png" />
+            <img src="/images/work-3.png" />
             <div class="layer">
               <h3>online shopping App</h3>
               <p>connect people all around the world</p>
@@ -201,7 +201,7 @@
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a
-              href="/My_Portfolio/images/my-cv - Copy.pdf"
+              href="/images/my-cv - Copy.pdf"
               download
               class="btn btn2"
               >Download CV</a
