modified html as required

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 ABC school
               </li>
               <li>
-                <span>2029-21</span><br />worked at xy complex as sales
+                <span>2029-21</span><br />worked at Gorkha complex as sales
                 Accountant
               </li>
               <li><span>2023</span><br />Managing the Projects</li>
