Update Hero Section

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Personal Portfolio website</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/58d378eaef.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="header">
-    <div class="container">
+    <div class="container headerContainer">
       <nav>
-        <img src="/images/logo.png" height="160px" width="140px" class="logo" />
+        <img src="/images/logo.png" class="logo" />
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -28,9 +31,8 @@
       <div class="header-text">
         <p>Passionate Web Developer</p>
         <h1>
-          Hi! I 'm<span> Prashanta</span><br />
-          Deuja From Nepal
-        </h1>
+          Hi ! I 'm<br />
+         <span>Prashanta Deuja </span>
       </div>
     </div>
   </div>
