Debug JS Embedding in index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   </div>
 
     <!-- Link to external JavaScript file -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
